--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2038,17 +2038,51 @@ a:hover {
 }
 
 #MenuToggle {
-  display: block !important;
   position: relative;
   padding: 0;
   top: 50%;
-  left: 50%;
-  width: 1em;
-  height: 1em;
+  left: 0;
+  width: 100%;
+  height: 100%;
   border-radius: 1em;
+}
+
+#MenuToggle.showingDD {
+  background-color: transparent;
+}
+
+#MenuToggle.active {
+  background-color: unset !important;
+}
+
+#MenuToggle.active::after {
+  content: "";
+  background-color: var(--purple30);
+  display: inline-block;
+  position: absolute;
+  width: 3em;
+  height: 3em;
+  top: 50%;
+  left: 52%;
+  border-radius: 5px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  /*margin-bottom: 0.8em;*/
+  z-index: -1;
+}
+
+#MenuToggle.showingDD::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 3em;
+  height: 3em;
+  top: 50%;
+  left: 52%;
+  border-radius: 5px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: var(--purple10);
+  z-index: -1;
 }
 
 .mobile #MobileMenu {
@@ -2059,56 +2093,9 @@ a:hover {
   display: none;
 }
 
-/*#MenuDisplay {border-color:var(--purple50);}*/
-
-/*#MobileMenu .divide .title{
-    padding: 0 !important;
-    border: 2px solid var(--yellow30) !important;
-    background-color: var(--yellow30) !important;
-    width: 6em;
-    display: inline-block !important;
-    right: -5px !important;
-}
 #MenuDisplay {
-    display:inline-block !important;
-    transform:scale(0);
-    transition: transform 500ms;
-    transform-origin: top right;
+  border-top-color: var(--purple10);
 }
-#MenuDisplay.active {
-    transform: scale(1);
-}*/
-
-/*#MobileMenu .underline{display: none !important;}
-#MobileMenu.active .tab{display:block;height:3em;}
-#MobileMenu.active .title{
-    position: absolute;
-    right:0;
-    background-color: rgba(255,255,255,0.95);
-    border: 1px solid var(--yellow);
-}
-#MobileMenu.active .title.showingDD{
-    box-shadow: 0 0 3px 1px inset var(--yellow);
-}
-#MobileMenu.active .title.active{
-    background-color: var(--yellow);
-}
-#MobileMenu.active .dropDown{
-    left: -3em;
-    top: 3em;
-    border: 4px solid rgb(240,240,240);
-    border-top-style: dotted;
-    text-align: center;
-    z-index: 2;
-    padding:0;
-    background-color: rgba(255,255,255,0.95);
-    transform: translateX(-50%) scaleX(1);
-    transform-origin: center;
-}
-#MobileMenu.active .dropDown .title{
-    position: relative;
-    border-color: transparent;
-}*/
 
 .siteMenu .title.active {
   background-color: var(--yellow);
