--- a/resources/sass/jquery.datepick.css
+++ b/resources/sass/jquery.datepick.css
@@ -2,7 +2,7 @@
 .datepick {
 	background-color: #fff;
 	color: #000;
-	border: 1px solid #444;
+	border: 1px solid var(--purple50);
     border-radius: 0.25em;
     -moz-border-radius: 0.25em;
     -webkit-border-radius: 0.25em;
@@ -43,7 +43,7 @@
 .datepick-nav, .datepick-ctrl {
 	float: left;
 	width: 100%;
-	background-color: #000;
+	background-color: var(--purple);
 	color: #fff;
 	font-size: 90%;
 	font-weight: bold;
@@ -55,7 +55,7 @@
 	width: 30%;
 }
 .datepick-cmd:hover {
-	background-color: #777;
+	background-color: var(--purple70);
 }
 .datepick-ctrl .datepick-cmd:hover {
 	background-color: var(--purple);
@@ -102,7 +102,7 @@ button.datepick-cmd {
 }
 .datepick-month-nav {
 	float: left;
-	background-color: #777;
+	background-color: var(--purple70);
 	text-align: center;
 }
 .datepick-month-nav div {
@@ -120,12 +120,12 @@ button.datepick-cmd {
 .datepick-month {
 	float: left;
 	width: 15em;
-	border: 1px solid #444;
+	border: 1px solid var(--purple90);
 	text-align: center;
 }
 .datepick-month-header, .datepick-month-header select, .datepick-month-header input {
 	height: 1.5em;
-	background-color: #444;
+	background-color: var(--purple70);
 	color: #fff;
 	font-weight: bold;
 }
@@ -145,7 +145,7 @@ button.datepick-cmd {
 	border-collapse: collapse;
 }
 .datepick-month thead {
-	border-bottom: 1px solid #aaa;
+	border-bottom: 1px solid var(--purple50);
 }
 .datepick-month th, .datepick-month td {
 	margin: 0em;
@@ -154,21 +154,21 @@ button.datepick-cmd {
 	text-align: center;
 }
 .datepick-month th {
-	border: 1px solid #777;
+	border: 1px solid var(--purple70);
 }
 .datepick-month th, .datepick-month th a {
-	background-color: #777;
+	background-color: var(--purple50);
 	color: #fff;
 }
 .datepick-month td {
 	background-color: white;
-	border: 1px solid #aaa;
+	border: 1px solid var(--yellow50);
 }
 .datepick-month td.datepick-week {
-	border: 1px solid #777;
+	border: 1px solid var(--purple50);
 }
 .datepick-month td.datepick-week * {
-	background-color: #777;
+	background-color: var(--purple70);
 	color: #fff;
 	border: none;
 }
@@ -193,7 +193,7 @@ button.datepick-cmd {
 	background-color: #fff;
 }
 .datepick-month td .datepick-weekend {
-	background-color: #ddd;
+	background-color: var(--yellow10);
 }
 .datepick-month td .datepick-today {
 	background-color: var(--yellow30);
@@ -202,11 +202,11 @@ button.datepick-cmd {
 	background-color: var(--yellow50);
 }
 .datepick-month td .datepick-selected {
-	background-color: #777;
+	background-color: var(--yellow90);
 	color: #fff;
 }
 .datepick-month th.datepick-week {
-	background-color: #777;
+	background-color: var(--purple70);
 	color: #fff;
 }
 .datepick-status {
