--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -694,10 +694,6 @@ form, .indent, .report, .w95 {
     margin: auto 15px auto -10px;
 }
 
-input[type=number]{
-    width: 35px;
-} 
-
 #Letters ul {
     display: inline-block;
     border-width: 0 0 0 1px;
@@ -1504,6 +1500,44 @@ input#PatientName {
 .optionsNav .navHead{
     /*padding: 1em;*/
 }
+.imageClick {
+  position: relative;
+  display: inline-block;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 15em;
+  cursor: crosshair;
+}
+
+.imageClick .undo {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.imageClick .indicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.5em;
+  height: 1.5em;
+  padding: 0;
+  border-radius: 1.5em;
+  border: 1px solid var(--pink90);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: var(--pink70);
+  box-shadow: 0 0 0.2em 0.2em var(--pink30);
+}
+
+.imageClick .indicatorWrap {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+}
+
 
 .number {
     /*padding: 0.4em 0.5em;*/
