--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1502,19 +1502,21 @@ input#PatientName {
 }
 .imageClick {
   position: relative;
-  display: inline-block;
+  display: block;
+  margin: auto;
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 15em;
+  max-height: 90vh;
   cursor: crosshair;
 }
 
 .imageClick .undo {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 5px;
+  right: 5px;
+  margin: 0;
 }
 
 .imageClick .indicator {
